--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
       crossorigin="anonymous"
     ></script>
     <meta charset="utf-8" />
+    <meta name="description" property="og:description" content="" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%favicon.ico" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -29,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>졸업 학점 계산기</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
