--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,13 @@
       crossorigin="anonymous"
     ></script>
     <meta charset="utf-8" />
-    <meta name="description" property="og:description" content="" />
-    <meta name="image" property="og:image" content="%PUBLIC_URL%favicon.ico" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="졸업학점계산기" />
+    <meta name="description" property="og:description" content="" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%favicon.ico" />
+    <meta name="url" property="og:url" content="" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
