chore:og이미지 변경

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="졸업학점계산기" />
     <meta name="description" property="og:description" content="" />
-    <meta name="image" property="og:image" content="%PUBLIC_URL%favicon.ico" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%schedule.png" />
     <meta name="url" property="og:url" content="" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
