feat:카카오 애드핏 적용

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>졸업 학점 계산기</title>
+    <ins
+      class="kakao_ad_area"
+      style="display: none"
+      data-ad-unit="DAN-D7uy7Koj4VRBmFmP"
+      data-ad-width="320"
+      data-ad-height="100"
+    ></ins>
+    <script
+      type="text/javascript"
+      src="//t1.daumcdn.net/kas/static/ba.min.js"
+      async
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -58,5 +70,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <ins
+      class="kakao_ad_area"
+      style="display: none"
+      data-ad-unit="DAN-D7uy7Koj4VRBmFmP"
+      data-ad-width="320"
+      data-ad-height="100"
+    ></ins>
+    <script
+      type="text/javascript"
+      src="//t1.daumcdn.net/kas/static/ba.min.js"
+      async
+    ></script>
   </body>
 </html>
